feat: implement role-based access control by extracting and mapping JWT roles to security authorities